--- a/ui/index.html
+++ b/ui/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" type="image/png" href="/favicon.png" />
     <meta name="robots" content="noindex" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>GMTK Game Jam Team Finder</title>
+    <title>GDL Game Jam Team Finder</title>
   </head>
   <body
     class="bg-darkbg text-white font-sans accent-primary"
