--- a/ui/index.html
+++ b/ui/index.html
@@ -9,7 +9,7 @@
   </head>
   <body
     class="bg-darkbg text-white font-sans accent-primary"
-    style="background-image: url('/background-image.jpeg'); background-size: 100%"
+    style="background-color: #252626; background-size: 100%"
   >
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
